--- a/proxy/conf/esgf.conf
+++ b/proxy/conf/esgf.conf
@@ -1,35 +1,5 @@
 # Nginx configuration for the ESGF proxy
 
-# Use upstreams rather than embedding URLs in the location blocks to prevent
-# Nginx caching the IPs at startup time
-# This allows the containers to restart and pick up new IPs without breaking
-# the proxy
-upstream esgf_solr {
-    server ${ESGF_SOLR_UPSTREAM};
-}
-upstream esgf_index_node {
-    server ${ESGF_INDEX_NODE_UPSTREAM};
-}
-upstream esgf_tds {
-    server ${ESGF_TDS_UPSTREAM};
-}
-upstream esgf_cog {
-    server ${ESGF_COG_UPSTREAM};
-}
-upstream esgf_orp {
-    server ${ESGF_ORP_UPSTREAM};
-}
-upstream esgf_idp {
-    server ${ESGF_IDP_UPSTREAM};
-}
-upstream esgf_slcs {
-    server ${ESGF_SLCS_UPSTREAM};
-}
-upstream esgf_auth {
-    server ${ESGF_AUTH_UPSTREAM};
-}
-
-
 server {
     server_name ${ESGF_HOSTNAME};
     listen 80;
@@ -45,15 +15,22 @@ server {
     proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header  X-Forwarded-Proto $scheme;
 
+    # In order to prevent Nginx aggresively caching IPs, preventing it from picking
+    # up restarted services, we use a trick with resolver and variables
+    resolver ${ESGF_RESOLVER};
+
     # Proxy some specific requests that are allowed for plain HTTP
+    set $solr_upstream ${ESGF_SOLR_UPSTREAM};
     location /solr {
-        proxy_pass http://esgf_solr;
+        proxy_pass $solr_upstream;
     }
+    set $index_node_upstream ${ESGF_INDEX_NODE_UPSTREAM};
     location /esg-search {
-        proxy_pass http://esgf_index_node;
+        proxy_pass $index_node_upstream;
     }
+    set $tds_upstream ${ESGF_TDS_UPSTREAM};
     location /thredds {
-        proxy_pass http://esgf_tds;
+        proxy_pass $tds_upstream;
     }
 }
 
@@ -89,38 +66,53 @@ server {
     add_header Strict-Transport-Security max-age=15768000;
 
     # Client certificate verification
-    # ssl_verify_client optional;
-    # ssl_client_certificate /etc/nginx/certs/ca.crt;
+    ssl_verify_client optional;
+    ssl_client_certificate ${ESGF_PROXY_SSL_CLIENT_TRUSTED_CERTS};
 
     proxy_set_header  Host $http_host;
     proxy_set_header  X-Real-IP $remote_addr;
     proxy_set_header  X-Forwarded-Host $http_host;
     proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header  X-Forwarded-Proto $scheme;
+    proxy_set_header  SSL_CLIENT_CERT $ssl_client_cert;
+    proxy_set_header  SSL_CIPHER $ssl_cipher;
+    proxy_set_header  SSL_SESSION_ID $ssl_session_id;
+
+    # In order to prevent Nginx aggresively caching IPs, preventing it from picking
+    # up restarted services, we use a trick with resolver and variables
+    resolver ${ESGF_RESOLVER};
 
     # All requests except those with more specific matches go to CoG
+    set $cog_upstream ${ESGF_COG_UPSTREAM};
     location / {
-        proxy_pass http://esgf_cog;
+        proxy_pass $cog_upstream;
     }
+    set $solr_upstream ${ESGF_SOLR_UPSTREAM};
     location /solr {
-        proxy_pass http://esgf_solr;
+        proxy_pass $solr_upstream;
     }
+    set $orp_upstream ${ESGF_ORP_UPSTREAM};
     location /esg-orp {
-        proxy_pass http://esgf_orp;
+        proxy_pass $orp_upstream;
     }
+    set $idp_upstream ${ESGF_IDP_UPSTREAM};
     location /esgf-idp {
-        proxy_pass http://esgf_idp;
+        proxy_pass $idp_upstream;
     }
+    set $index_node_upstream ${ESGF_INDEX_NODE_UPSTREAM};
     location /esg-search {
-        proxy_pass http://esgf_index_node;
+        proxy_pass $index_node_upstream;
     }
+    set $tds_upstream ${ESGF_TDS_UPSTREAM};
     location /thredds {
-        proxy_pass http://esgf_tds;
+        proxy_pass $tds_upstream;
     }
+    set $slcs_upstream ${ESGF_SLCS_UPSTREAM};
     location /esgf-slcs {
-        proxy_pass http://esgf_slcs;
+        proxy_pass $slcs_upstream;
     }
+    set $auth_upstream ${ESGF_AUTH_UPSTREAM};
     location /esgf-auth {
-        proxy_pass http://esgf_auth;
+        proxy_pass $auth_upstream;
     }
 }
