--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,6 @@ services:
     environment: &config_env
       ESGF_HOSTNAME:
       ESGF_DATABASE_HOST: esgf-postgres
-      ESGF_SOLR_INTERNAL_URL: "http://esgf-solr:8983"
 
   # Build dependency only
   esgf-tomcat:
@@ -195,6 +194,7 @@ services:
     restart: always
     environment:
       <<: *config_env
+      ESGF_SOLR_HOSTNAME: esgf-solr:8983
     volumes:
       # Make sure the trusted certificate bundle is available
       - "$ESGF_CONFIG/certificates/esg-trust-bundle.pem:/esg/certificates/esg-trust-bundle.pem:ro"
