Extend Travis timeout

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ addons:
 # Use the Git version as the tag
 script:
   - export ESGF_VERSION="$(git describe --always --tags)"
-  - docker-compose build
+  - travis_wait 30 docker-compose build
 
 # If the build was successful, push them to Docker Hub with the Git version tag
 # Then retag with latest and push again only if master
