--- a/index-node/Dockerfile
+++ b/index-node/Dockerfile
@@ -30,7 +30,8 @@ RUN mkdir /opt/esg-search && \
     cd /opt/esg-search && \
     TMPFILE=$(mktemp) && \
     curl -o $TMPFILE -fsSL $ESGF_REPO/esg-search/esg-search.war && \
-    jar xvf $TMPFILE
+    jar xvf $TMPFILE && \
+    chmod -R g+w /opt/esg-search
 
 
 #############
@@ -47,9 +48,9 @@ RUN apt-get update && \
     rm -rf /var/lib/apt/lists/*
 
 # Copy the unpacked webapp from the previous build stage
-COPY --from=esg-search-unpack --chown=tomcat:tomcat /opt/esg-search $CATALINA_HOME/webapps/esg-search
-# Remove all permissions from any user except tomcat on the webapp
-RUN chmod -R o-rwx $CATALINA_HOME/webapps/esg-search
+# Ensure it is owned by the tomcat user and root group, as we want any user in
+# the root group to be able to run the container
+COPY --from=esg-search-unpack --chown=1001:0 /opt/esg-search $CATALINA_HOME/webapps/esg-search
 
 # Make sure esgf_shards.xml is recognised as a shards file as well as esgf_shards_static.xml
 RUN sed -i \
@@ -57,9 +58,14 @@ RUN sed -i \
         $CATALINA_HOME/webapps/esg-search/WEB-INF/classes/esg/search/config/application-context.xml
 
 # Install environment customisations
-COPY --from=configuration /esg/config /esg/config
+# Ensure the config directory is owned by the tomcat user and root group
+RUN mkdir -p /esg/config && chown 1001:0 /esg/config && chmod 775 /esg/config
+COPY --chown=1001:0 --from=configuration /esg/config /esg/config
 # Make sure the config interpolation runs first by giving it a low ordinal
 COPY --from=configuration /opt/esgf-docker/scripts/interpolate-configs.sh /tomcat-init.d/01-interpolate.sh
 COPY scripts/setenv.sh $CATALINA_HOME/bin/
 # Make sure this runs after the config interpolation
 COPY scripts/create-indices.sh /tomcat-init.d/02-create-indices.sh
+
+# Run as the tomcat user by default
+USER 1001
